# bayes_efficiency_mila

./: README.md  TODO.md  pyproject.toml
configs/: bayes_pilot_example.json  ngram_bayes_example.json
docs/: score_definitions.md
slurm/: cpu_bayes_pilot.sbatch  cpu_ngram_bayes.sbatch  gpu_context_likelihood.sbatch  pbm_ngram_bayes.sbatch
src/bayes_efficiency_mila/: __init__.py  __main__.py  big_cleaned.py  cli.py  combine.py  io.py  manifest.py  ngram_bayes.py
tests/: test_combine.py
