[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bayes-efficiency-mila"
version = "0.1.0"
description = "Bayes-style decomposition scoring pilots for communicative-efficiency analyses."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Nicolas Goulet", email = "nicolas.goulet@hec.ca"}
]
dependencies = []

[project.scripts]
bayes-efficiency-mila = "bayes_efficiency_mila.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
